# apatheia-labs-website

./: .auto-claude-status  .dockerignore  .env.example  .env.local  .eslintrc.js  .eslintrc.json  .fcip-removal-summary.md  .gitignore  .prettierignore  .prettierrc  404.html  AGENT-SPECIFICATIONS.md  AGENTS.md  ANTIGRAVITY_RUST.md  AUDIT.md  CLAUDE.md  DEPLOYMENT.md  FEATURES.md  README.md  TAURI.md  TAURI_ARCHITECTURE.md  TESTING.md  app.js  build.js  cliff.toml  commitlint.config.js  docker-compose.yml  eslint.config.js  index.html  jest.config.js  next-sitemap.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  robots.txt  sitemap.xml  styles.css  tailwind.config.ts  test-upload.txt  (+4 more)
.husky/: pre-push
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecars/: engine-runner.js  engine-runner.ts  package-lock.json  package.json
src-tauri/src/: credentials.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  json_extract.rs  mod.rs  retry.rs
src-tauri/src/ai/providers/: anthropic.rs
src-tauri/src/cloud/: google_drive.rs  mod.rs  oauth.rs
src-tauri/src/commands/: analysis.rs  cases.rs  cloud.rs  complaint.rs  documents.rs  export.rs  investigate.rs  mod.rs  settings.rs
src-tauri/src/complaint/: generator.rs  mod.rs  templates.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/engines/: accountability.rs  argumentation.rs  bias.rs  contradiction.rs  documentary.rs  entity.rs  expert.rs  mod.rs  narrative.rs  omission.rs  professional.rs  temporal.rs
src-tauri/src/orchestrator/: job.rs  mod.rs  runner.rs
src-tauri/src/processing/: chunker.rs  extractor.rs  mod.rs
src-tauri/src/sam/: executor.rs  mod.rs
src-tauri/src/schema/: mod.rs
src-tauri/src/storage/: mod.rs
(+604 files in other folders)
