[package]
name = "phronesis"
version = "0.1.0"
description = "Phronesis FCIP - Forensic Case Intelligence Platform"
authors = ["Apatheia Labs"]
license = "MIT"
repository = "https://github.com/apatheia-labs/phronesis"
edition = "2021"
rust-version = "1.77.2"
default-run = "phronesis"

[lib]
name = "phronesis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
once_cell = "1.19"

# File handling
sha2 = "0.10"
hex = "0.4"

# Document processing
pdf-extract = "0.7"
zip = "2.2"
regex = "1.10"
tempfile = "3.10"
quick-xml = "0.37"

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Secure credential storage
keyring = "3"

# Cloud storage OAuth
rand = "0.8"
base64 = "0.22"
url = "2.5"
lazy_static = "1.5"

# Binaries
[[bin]]
name = "schema_gen"
path = "src/bin/schema_gen.rs"
required-features = ["schema-gen"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
schema-gen = ["dep:schemars"]

[dependencies.schemars]
version = "0.8"
optional = true
